--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 # dependencies
 /node_modules
+/bower_components
 
 # IDEs and editors
 /.idea
@@ -40,4 +41,4 @@ testem.log
 Thumbs.db
 
 #Firebase credentials
-/src/app/api-keys.ts 
+/src/app/api-keys.ts
